Fix the spacing, and add the font name

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  font: normal 100%/1.3, serif;
+  font: normal 100%/1.3 Georgia, serif;
   box-sizing: border-box;
   line-height: 1.3;
 }
@@ -50,18 +50,20 @@ h2 {
     line-height: 1.4;
   }
 
-figure {
-  position: relative;
-}
+  figure {
+    position: relative;
+  }
 
-figcaption {
-  position: absolute;
-  bottom: 1.5em;
-  right: 1em;
-  width: 65%;
-  color: #fff;
-  background-color: rgba(0, 0, 0, .3);
-  border-radius: 10px;
+  figcaption {
+    position: absolute;
+    bottom: 1.5em;
+    right: 1em;
+    width: 65%;
+    color: #fff;
+    background-color: rgba(0, 0, 0, .3);
+    border-radius: 10px;
+  }
+
 }
 
 @media only screen and (min-width: 60em) {
@@ -73,8 +75,10 @@ figcaption {
 
   figcaption {
     width: 45%;
-    }
+  }
+
 }
+
 @media only screen and (min-width: 90em) {
 
   html {
@@ -84,4 +88,5 @@ figcaption {
   figcaption {
     width: 30%;
   }
+
 }
